--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1",
-    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
