--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "babel-loader": "^8.1.0",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.11.0"
   }
